Refactored warlord class